# BeAPad_Leds

./: .gitignore  Battery_Tests.txt  CMakeLists.txt  README.md  Serial-monitor.py  platformio.ini  upload-script.ps1
Resources_3D_printing/: Calage_plaques.f3d
Resources_PCB_Schematics/: cablagesa.fzz
Resources_PCB_Schematics/KiCadMotherBoard/: KiCadMotherBoard.kicad_pcb  KiCadMotherBoard.kicad_prl  KiCadMotherBoard.kicad_pro  KiCadMotherBoard.kicad_sch  _autosave-KiCadMotherBoard.kicad_pcb  fp-info-cache
src/: AccessPoint.cpp  AccessPoint.h  BlinkErrorMessages.cpp  BlinkHighPriorityMessages.h  Board.cpp  Board.h  CapacitiveTouch_Actions.cpp  CapacitiveTouch_Actions.h  CapacitiveTouch_Dispatcher.cpp  CapacitiveTouch_Dispatcher.h  CapacitiveTouch_MPR121Dispatcher.cpp  CapacitiveTouch_MPR121Dispatcher.h  CapacitiveTouch_RealDispatcher.cpp  CapacitiveTouch_RealDispatcher.h  Capacitive_Sensor.cpp  Capacitive_Sensor.h  ConcreteLedBoard.cpp  ConcreteLedBoard.h  ConcreteLedBoardsManager.cpp  ConcreteLedBoardsManager.h  DebugHelper_WebSocket.cpp  DebugHelper_WebSocket.h  Debug_Helper.cpp  Debug_Helper.h  Debug_Helper_Inactive.cpp  Debug_Helper_Inactive.h  Debug_Helper_Serial.cpp  Debug_Helper_Serial.h  FadeInFadeOutLightStrategy.cpp  FadeInFadeOutLightStrategy.h  FadeOutLightStrategy.cpp  FadeOutLightStrategy.h  FastLedLedBoard.cpp  FastLedLedBoard.h  FastLedLedBoardsManager.cpp  FastLedLedBoardsManager.h  FlashTowardsExteriorStrategy.cpp  FlashTowardsExteriorStrategy.h  FullLightStrategy.cpp  FullLightStrategy.h  (+78 more)
test/: CMakeLists.txt  CapacitiveTouch_Test.cpp  CheckBoardMidiSends_Test.cpp  Debug_Helper_Test.cpp  FakeBoard.cpp  FakeBoard.h  FakeConcreteLedBoardManager.cpp  FakeConcreteLedBoardManager.h  FakeLedBoard.cpp  FakeLedBoard.h  FakeLedBoardManager.cpp  FakeLedBoardManager.h  FakeLedBoardStore.cpp  FakeLedBoardStore.h  FakeMidiKeyDispatcher.cpp  FakeMidiKeyDispatcher.h  FakeMidiKeyReceiver.cpp  FakeMidiKeyReceiver.h  FakeString.cpp  FakeString.h  Fake_Arduino.cpp  Fake_Arduino.h  Fake_CRGB.cpp  Fake_CRGB.h  Fake_MidiHandler.cpp  Fake_MidiHandler.h  Fake_Sensor.cpp  Fake_Sensor.h  FullLightLightStrategy_Test.cpp  LedBoardManager_Test.cpp  LedBoard_Store_Test.cpp  LedBoard_Test.cpp  LightStrategyFactory_Test.cpp  LogMessages_Store_Test.cpp  MidiKeyDispatcher_Test.cpp  MidiKeyReceiver_Test.cpp  PinStateValidator_Test.cpp  SerpentinStrategy_Test.cpp  empty_Test.cpp  main-alltests.cpp  (+1 more)
(+10 files in other folders)
